# 0dd.sh

./: .gitignore  Cargo.toml  LICENSE  README.md  fastly.toml  go.mod  go.sum  runloop.sh  rust-toolchain.toml  upldis.go
.github/workflows/: deploy.yaml  fastly.yaml
src/: main.rs  privacy.txt  usage.txt
src/static/: robots.txt
src/templates/: index.html  markdown.html  privacy.html  usage.txt
