[package]
name = "upldis"
version = "0.1.0"
authors = ["ozwaldorf <self@ossian.dev>"]
edition = "2018"
publish = false

[profile.release]
debug = 1
lto = 'fat'

[dependencies]
fastly = "0.11"
tinytemplate = "1.2"
serde_json = "1.0"
humanize-bytes = "1.0"
humantime = "2.1"
bs58 = "0.5"
blake3 = "1.5"

