[package]
name = "upldis"
version = "3.0.0"
authors = ["ozwaldorf <self@ossian.dev>"]
edition = "2021"
publish = false

[profile.release]
debug = 1
lto = 'fat'

[dependencies]
# Core functionality deps
fastly = "0.11"
blake3 = "1.5"
bs58 = "0.5"

# Usage page deps
tinytemplate = "1.2"
serde_json = { version = "1.0", features = ["preserve_order"]}
compile-time = "0.2"
pad = "0.1"
humanize-bytes = "1.0"
humantime = "2.1"

